test/parser/unexpected-character-after-zero.delta
// RUN: %check_errors %not %delta -parse %s

void main() {
    // CHECK: [[@LINE+1]]:14: error: expected newline or ';', got identifier
    var i = 0_;
}
